--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,7 @@
+libapache2-mod-tile (0.4-12~xenial1) xenial; urgency=low
+  * Build for xenial
+
+ -- Kai Krueger <kakrueger@gmail.com>  Mon, 27 Aug 2012 00:00:00 +0000
 libapache2-mod-tile (0.4-12~precise2) precise; urgency=low
   * fixed renderd.conf to use mapnik 2.0 plugins dir
 
